# mpm-workflow

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: README.md
docs/: SYNTHETIC_DATA.md
examples/: generate_and_run_synthetic_cases.py  record_mpm_demo.py  run_workflow.py
src/mpm_workflow/: __init__.py  cli.py  core.py  diagnostics.py  synthetic.py
tests/: test_core.py
