[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mpm-workflow"
version = "0.1.0"
description = "Reusable tabular mineral prospectivity mapping workflow"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Samer R. Maghdour-Mashhour"}
]
keywords = ["mineral prospectivity mapping", "geoscience", "machine learning", "exploration"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
dev = ["pytest>=8.0", "ruff>=0.6", "matplotlib>=3.7"]

[project.scripts]
mpm-workflow = "mpm_workflow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["src"]
